test/rbkt/Queries/zorba/parser/syntax-errors/unexpected-qname-02.xq
(:
  Syntax error with an improved error message:
  unexpected QName
:)
    
for $sm1 in (1),
     sm2 in (2)
return $sm2
